<resources>
    <string name="app_name">بيعة وشروة</string>
    <string name="ok">OK</string>
    <string name="country">Country</string>
    <string name="login_faild">Login Error</string>
    <string name="empty_fields">Please fill in the blank fields</string>
    <string name="wrong_phone">Please enter valid phone number</string>
    <string name="wrong_code">Wrong code</string>
    <string name="try_again">Try Again</string>
    <string name="wrong_name">Please enter your full name</string>
    <string name="welcome">Welcome</string>
    <string name="somthing_wrong">Something wrong happened!</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="attention">Attention</string>
    <string name="resend_messsage">A new activation code has been sent back to your phone number</string>
    <string name="time_out">You have exceeded the limit for re-sending the activation code. Try again in another day</string>
    <string name="update">There is a new update in the store, update please</string>
    <string name="edit">Sorry, the application is closed for maintenance</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="check_the_mobile_number">Check the mobile number</string>
    <string name="we_have_sent">We have sent the verification number to your mobile number\nPlease enter the sent code</string>
    <string name="resend_code">Resend Code</string>
    <string name="check_now">Check Now</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="addProduct">Add Product</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="special_brokers">Special Sellers</string>
    <string name="special_products">Special Ads</string>
    <string name="new_brokers">New Sellers</string>
    <string name="new_products">New Ads</string>
    <string name="my_ads">My Ads</string>
    <string name="view">Views</string>
    <string name="my_favourite">Favourite</string>
    <string name="about">About Me</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_edit">About</string>
    <string name="save">Save</string>
    <string name="save_massege">Edit profile done successfully</string>
    <string name="app_language">App Language</string>
    <string name="qestions">Frequently Asked Questions</string>
    <string name="use_policy">Usage Policy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="call_us">Call Us</string>
    <string name="log_out">Logout</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="pick_lang">Pick Your Language</string>
    <string name="pick_country">Pick Your Country</string>
    <string name="email">Email</string>
    <string name="write_message">Enter Your Message</string>
    <string name="send">Send</string>
    <string name="send_result">Your Message has Sent Successfully</string>
    <string name="send_result4">Your Order has Sent Successfully</string>
    <string name="send_result2">Your Product has Sent Successfully</string>
    <string name="send_result3">Edit Done Successfully</string>
    <string name="search_hint">Search In This Category</string>
    <string name="search">Search</string>
    <string name="empty_search">No Results</string>
    <string name="old_first">Oldest first</string>
    <string name="new_first">Newest first</string>
    <string name="expensive_first">Most expensive first</string>
    <string name="cheaper_first">Cheaper first</string>
    <string name="seller">Advertiser</string>
    <string name="dollar">KWD</string>
    <string name="call">Call</string>
    <string name="whats">WhatsApp</string>
    <string name="favAdd">The product has been added to the favorite</string>
    <string name="favDelete">The product has been removed from the favorites</string>
    <string name="add">Add Advertisement</string>
    <string name="dept">Category</string>
    <string name="subdept">Subcategory</string>
    <string name="address">What would you like to announce</string>
    <string name="details">Advertisement Details</string>
    <string name="price">Price</string>
    <string name="whats_num">WhatsApp Number</string>
    <string name="add_image">Click to add photo</string>
    <string name="special">Discrimination</string>
</resources>